# Lure

./: .gitignore  CUTTING_EDGE_DETECTORS.md  PHISHOPS_PORTFOLIO_PROGRESS.md  README.md  RESEARCH_PROMPTS.md  THREAT_INTELLIGENCE.md  phishing_defense_hub.jsx  skills-lock.json
Plans/: AI_Phishing_Classifier_Technical_Guide.md  PhishOps_Browser_Attack_Landscape_DC3233.md  PhishOps_Master_Execution_Plan.md  PhishOps_Portfolio_Execution_Plan.md  lure-implementation-plan.docx  phishops-2026-update-implementation-plan.md  quishguard_technical_reference.md
Research/: AutofillGuard_DeepResearch_Report.md  External_Phishing_Resources_Analysis.md  FakeSender_Shield_Technical_Deep_Dive.md  FileSystemGuard_Research.md  Navigation API_Research.md  Phaas_Web_Environment_Integrity_Research.md  PhishOps Gap Analysis and GemResearch.md  PhishOps_2026_ThreatResearch_Update_Mar13.md  PhishOps_AiTM_Detection_DeepResearch.md  PhishOps_BrowserSuite_HybridAttackVectors_DeepResearch.md  PhishOps_DeepResearch_Full_Report.md  PhishOps_Detection_Portfolio_Architecture.md  PhishOps_Execution_Plan_Mar2026.md  PhishOps_GapAnalysis_Results_Mar2026.md  PhishVision_Technical_Deep_Dive.md  Protected Audiences API_Research.md  ProxyGuard_Gophish_RID_Detection.md  ShadowDOM_Research.md  SharedArrayBuffer_Research.md  Speculation_Rules_API_Research.md  (+12 more)
lure/: .env.example  README.md  pyproject.toml
lure/lure/: __init__.py  cli.py  config.py  models.py  pipeline.py
lure/lure.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lure/lure/modules/: __init__.py  extractor.py  parser.py  scanner.py  scorer.py
lure/rules/: README.md  phishing_custom.yar
lure/tests/: conftest.py  test_extractor.py  test_parser.py  test_pipeline.py  test_scanner.py  test_scorer.py
(+158 files in other folders)
